--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/favicon.ico">
+  <meta name="description" content="Daniel Rojas will present himself through his resume by the following.">
+  <meta name="author" content="862389340">
 
-  <title>John Doe - Business Administration</title>
+  <title>Daniel Rojas - Business Accounting</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Daniel Rojas</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/firstnamelastname.png" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,33 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Daniel Rojas
         </h1>
         <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <p class="lead mb-4">Although not much experience due to the fact I am an 18 year old freshman in college who is barely starting to build out his resume
+        I'd like to point out that I have landscaping experience because I have ran a landscaping business before. I would also like to strongly point out that I have 
+        construction experience because I have worked at a my friend's dad's company for about a year and a half.<br><br>
 
-        Enter bio here<br><br>
+        I have taken accounting courses before so I do feel I am more qualified for that reason since I have background knowledge. These courses
+        have been led by a prior chief financial officer of a company, a vice president of a company, and a successful multi business man.
+        I would be quick to assume that these positions have a generally demanding workload and that these men were able to learn principles, apply and
+        teach them correctly.<br><br>
 
-        Enter bio here
+        I was also a lead sales associate at American Eagle Outfitters at the Citadel which is the busiest, ost revenue generating location that American 
+        Eagle outfitters runs currently. The American Eagle Outfitters location at Time Square New York holds up very nicely but always comes in second. I have been 
+        working over two years at this location.
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.linkedin.com/in/daniel-rojas-0663a01b9/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/droja044ucr">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://www.instagram.com/daniel_roj4s/?hl=en">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:danielrojastrancoso@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -95,9 +102,10 @@
             <h3 class="mb-0">Developer</h3>
             <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Worked for American Eagle Outfitters<br> 
+              • Prior Contruction Experience<br>
+              • Landscaping Experience<br>
+              • Prior Accounting Experience
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -163,11 +171,11 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
+            <div class="subheading mb-3">Currently Studying Business with a concentration in accounting.</div>
             <div>Project Management</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary">November 2022</span>
           </div>
         </div>
 
@@ -178,7 +186,7 @@
             <div>Information Systems</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">August 2020 - November 2022</span>
           </div>
         </div>
 
@@ -191,7 +199,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/image1.jpeg" width="500px">
+            <img src="img/image2.jpeg" width="500px"><br>
+            <img src="img/image3.jpeg" width="500px">
+            <img src="img/image4.jpeg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +210,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Daniel Rojas</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
